--- a/styles.css
+++ b/styles.css
@@ -295,6 +295,10 @@ body {
     width: 53px;
 }
 
+.variable-input-group[data-type="oprocentowanie"] .form-control.variable-cykl {
+    width: 53px;
+}
+
 /* Styl dla wszystkich pól formularza w stanie :focus */
 .form-group .form-control:focus,
 .form-group .form-select:focus,
@@ -464,7 +468,8 @@ body {
     white-space: nowrap;
 }
 
-.variable-input-group[data-type="nadplata"] .input-group-text {
+.variable-input-group[data-type="nadplata"] .input-group-text,
+.variable-input-group[data-type="oprocentowanie"] .input-group-text {
     width: auto;
     min-width: 40px;
 }
@@ -487,6 +492,12 @@ body {
 }
 
 .variable-input-group[data-type="nadplata"] .input-group {
+    width: 108px;
+}
+
+.variable-input-group[data-type="oprocentowanie"] .input-group {
+    display: flex;
+    align-items: center;
     width: 108px;
 }
 
@@ -731,7 +742,7 @@ input[type="range"].form-range:focus::-ms-thumb {
     box-sizing: border-box;
 }
 
-/mixins.css
+/*mixins.css*/
 .result-wrapper-chart {
     width: 100%;
     max-width: 600px;
@@ -1186,7 +1197,18 @@ input[type="range"].form-range:focus::-ms-thumb {
         width: 90px;
     }
 
+    .variable-input-group[data-type="oprocentowanie"] .form-control.variable-cykl {
+        width: 90px;
+    }
+
     .variable-input-group[data-type="nadplata"] .input-group {
+        display: flex;
+        align-items: center;
+        width: 150px;
+        max-width: 150px;
+    }
+
+    .variable-input-group[data-type="oprocentowanie"] .input-group {
         display: flex;
         align-items: center;
         width: 150px;
